--- a/practice_spring/demo/build.gradle
+++ b/practice_spring/demo/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-validation' // Week3 Day6 유효성 검증을위해 추가
 }
 
 tasks.named('test') {
